# AuDHD-LifeCoach

./: .coveragerc  Dockerfile  Dockerfile.dev  Dockerfile.minimal  Dockerfile.simple  GUIDELINES.md  README.md  docker-compose.minimal.yml  docker-compose.simple.yml  docker-compose.yml  docker-entrypoint.py  message_consumer_entrypoint.py  project-config.json  pyproject.toml  pytest.ini  requirements.txt
helm/audhd-lifecoach/: Chart.yaml  values.yaml
helm/audhd-lifecoach/templates/: deployment.yaml  service.yaml
scripts/: build_docker_image.bat  build_docker_image.sh  debug_ner_pipeline.py  send_test_message.py
src/audhd_lifecoach/: main.py  message_consumer_main.py
src/audhd_lifecoach/adapters/: __init__.py
src/audhd_lifecoach/adapters/ai/: __init__.py  hugging_face_onyx_transformer_commitment_identifier.py  spacy_commitment_identifier.py
src/audhd_lifecoach/adapters/api/: communication_controller.py  fastapi_adapter.py  health_controller.py
src/audhd_lifecoach/adapters/messaging/: __init__.py  rabbitmq_message_consumer.py  rabbitmq_message_publisher.py
src/audhd_lifecoach/application/dtos/: __init__.py  communication_dto.py  health_dto.py
src/audhd_lifecoach/application/interfaces/: __init__.py  message_consumer_interface.py  message_publisher_interface.py  web_app_interface.py
src/audhd_lifecoach/application/services/: __init__.py  health_service.py  message_consumer_service.py
src/audhd_lifecoach/core/domain/: config.py
tests/integration/: test_communication_api_flow.py  test_communication_to_reminder_flow.py  test_message_consumer_flow.py
(+21 files in other folders)
