[tool.poetry]
name = "audhd-lifecoach"
version = "0.1.0"
description = "A life coach application for people with AuDHD"
authors = ["Izzy Fuller"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.3"
sqlalchemy = "^2.0.27"
pytest = "^7.4.0"
httpx = "^0.27.0"
# NLP dependencies - no longer optional
transformers = "^4.35.0"
onnxruntime = "^1.16.0"
optimum = "^1.15.0"
dateparser = "^1.2.1"
pika = "^1.3.2"
testcontainers-rabbitmq = "^0.0.1rc1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests (real dependencies, slower)"
]

[tool.pytest.ini_options.coverage.run]
omit = [
    "*/interfaces/*",
    "src/audhd_lifecoach/core/interfaces/*",
    "*/*entrypoint*.py",
    "*/__init__.py",
    "*/tests/*"
]
